# sead_sexdiff

./: .gitignore  README.md  pyproject.toml
src/sead_sexdiff/: DEG.R  __init__.py  cli.py  data.py
