[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "sead-sexdiff"
version = "0.1.0"
description = "Project scaffold for SEAD sexdiff analyses using uv, Python >=3.12, pandas, and numpy."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "tomas" }
]
dependencies = [
  "pandas",
  "numpy",
  "boto3",
  "botocore>=1.41.0",
  "boto3-stubs==1.41.0",
]

[project.scripts]
sead-sexdiff = "sead_sexdiff.cli:main"

[project.optional-dependencies]
dev = [
  # Add dev-only tools here if needed, e.g., linters or test frameworks
]

[tool.hatch.build.targets.wheel]
packages = ["src/sead_sexdiff"]
