[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "sead-sexdiff"
version = "0.1.0"
description = "Project scaffold for SEAD sexdiff analyses using uv, Python >=3.12, pandas, and numpy."
readme = "README.md"
requires-python = ">=3.12, <3.14"
license = { file = "LICENSE" }
authors = [
  { name = "tomas" }
]
dependencies = [
  "pandas",
  "numpy",
  "boto3==1.42.0",
  "botocore==1.41.6",
  "boto3-stubs==1.41.5",
  "scanpy>=1.11.5",
  "anndata>=0.12.6",
  "hatchling==1.28.0",
  "botocore-stubs==1.41.6",
  "pandas-stubs==2.3.3.251201",
  "rpy2>=3.6.4",
  "decoupler>=2.1.2",
]

[project.scripts]
sead-sexdiff = "sead_sexdiff.cli:main"

[project.optional-dependencies]
dev = [
  # Add dev-only tools here if needed, e.g., linters or test frameworks
]

[tool.hatch.build.targets.wheel]
packages = ["src/sead_sexdiff"]
